--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -6,6 +6,11 @@
     padding-top: 60px;
     padding-bottom: 61px;
   }
+
+  @include media-tablet {
+    padding-top: 40px;
+    padding-bottom: 67px;
+  }
 }
 
 .contacts__title {
@@ -14,12 +19,20 @@
   @include media-desktop {
     margin-bottom: 59px;
   }
+
+   @include media-tablet {
+        margin-bottom: 40px;
+    }
 }
 
 .contacts__wrapper {
   display: flex;
   gap: 25px;
   justify-content: space-between;
+
+     @include media-tablet {
+      flex-direction: column;
+     }
 }
 
 .contacts__img {
@@ -34,6 +47,12 @@
     width: 694px;
     height: 454px;
   }
+
+         @include media-tablet {
+          width: 728px;
+    height: 476px;
+    margin-top: 7px;
+        }
 }
 
 .contacts__address {
@@ -42,6 +61,11 @@
   @include media-desktop {
     margin-bottom: 30px;
   }
+
+       @include media-tablet {
+           margin-bottom: 35px;
+
+      }
 }
 
 .contacts__text {
@@ -60,6 +84,8 @@
 
   @include media-tablet {
     font-size: 18px;
+        line-height: 34.5px;
+
   }
 
   @include media-mobile {
