--- a/source/styles/blocks/gallery.scss
+++ b/source/styles/blocks/gallery.scss
@@ -5,6 +5,9 @@
   @include media-desktop {
     padding-top: 60px;
   }
+  @include media-tablet {
+    padding-top: 40px;
+  }
 }
 
 .gallery__title {
@@ -12,6 +15,11 @@
 
   @include media-desktop {
       margin-bottom: 60px;
+  }
+
+  @include media-tablet {
+         margin-bottom: 40px;
+
   }
 }
 .gallery__slider {
@@ -34,6 +42,11 @@
     @include media-desktop {
       height: 1265px;
     }
+
+      @include media-tablet {
+            height: 1080px;
+
+      }
 }
 
 .gallery__list {
