--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -6,14 +6,19 @@
   padding-top: 58px;
   padding-bottom: 60px;
 
+    display: flex;
+  align-items: center;
+  justify-content: space-between;
+
   @include media-desktop {
     padding-top: 48px;
     padding-bottom: 49px;
   }
 
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  @include media-tablet {
+    padding-top: 35px;
+    padding-bottom: 25px;
+  }
 }
 
 .header__nav {
