--- a/source/styles/blocks/footer.scss
+++ b/source/styles/blocks/footer.scss
@@ -23,6 +23,12 @@
   @include media-desktop {
     padding-bottom: 49px;
   }
+
+      .logo {
+    @include media-mobile {
+      gap: 20px;
+    }
+}
 }
 
 .footer__nav {
