--- a/source/styles/base/fonts-styles.scss
+++ b/source/styles/base/fonts-styles.scss
@@ -21,6 +21,10 @@
     @include media-desktop {
       padding-bottom: 24px;
     }
+
+    @include media-mobile {
+      padding-bottom: 23px;
+    }
   }
 
   @include media-desktop {
@@ -55,6 +59,7 @@
 
   @include media-mobile {
     font-size: 16px;
+    letter-spacing: 3px;
   }
 }
 
@@ -111,6 +116,7 @@
 
   @include media-mobile {
     font-size: 16px;
+    line-height: 100%;
   }
 }
 
@@ -148,7 +154,7 @@
 
     @include media-mobile {
       font-size: 18px;
-      letter-spacing: 0.05em;
+      letter-spacing: 5px;
     }
   }
 }
@@ -188,7 +194,6 @@
   &--bg-dark {
     color: $color-white;
   }
-
 
   @include media-desktop {
     font-size: 20px;
@@ -231,6 +236,8 @@
 
   @include media-mobile {
     font-size: 16px;
+    letter-spacing: 1px;
+    line-height: 120%;
   }
 }
 
@@ -245,5 +252,8 @@
 
   @include media-mobile {
     font-size: 16px;
+    &--rss {
+      display: none;
+    }
   }
 }
