--- a/source/styles/blocks/form.scss
+++ b/source/styles/blocks/form.scss
@@ -50,6 +50,10 @@
   @include media-desktop {
     width: 175px;
   }
+
+    @include media-mobile {
+    margin: 0 auto;
+    }
 }
 
 .form__wrapper-type {
@@ -78,6 +82,11 @@
   @include media-tablet {
     margin-bottom: 36px;
   }
+
+    @include media-mobile {
+    text-align: center;
+    margin-bottom: 12px;
+    }
 }
 
 .form__label {
@@ -106,6 +115,8 @@
 
   @include media-mobile {
     font-size: 16px;
+    letter-spacing: 1px;
+    margin-bottom: 6px;
   }
 }
 
@@ -125,6 +136,10 @@
   @include media-tablet {
     margin-bottom: 22px;
   }
+
+    @include media-mobile {
+    margin-bottom: 11px;
+    }
 }
 
 .form_count-btn {
@@ -173,6 +188,13 @@ input[type="number"] {
   @include media-tablet {
     margin-top: 40px;
   }
+
+      @include media-mobile {
+          margin-top: 42px;
+    text-align: center;
+    letter-spacing: 1px;
+
+      }
 }
 
 .form__btn {
@@ -203,6 +225,9 @@ input[type="number"] {
   @include media-tablet {
     margin-top: 40px;
         letter-spacing: 3.3px;
-
   }
+        @include media-mobile {
+        margin-right: auto;
+        font-size: 16px;
+        }
 }
