--- a/source/styles/blocks/visiting.scss
+++ b/source/styles/blocks/visiting.scss
@@ -11,6 +11,10 @@
     padding-top: 40px;
     padding-bottom: 80px;
   }
+
+  @include media-mobile {
+    padding-bottom: 42px;
+  }
 }
 
 .visiting__list {
@@ -27,8 +31,14 @@
 
   @include media-tablet {
     gap: 42px 56px;
-       padding-left: 56px;
+    padding-left: 56px;
     padding-right: 56px;
+  }
+
+  @include media-mobile {
+    gap: 42px 56px;
+    padding-left: 50px;
+    padding-right: 50px;
   }
 }
 
@@ -39,9 +49,9 @@
     margin-bottom: 60px;
   }
 
-    @include media-tablet {
-        margin-bottom: 40px;
-    }
+  @include media-tablet {
+    margin-bottom: 40px;
+  }
 }
 
 .visiting__card {
