--- a/source/styles/base/fonts-styles.scss
+++ b/source/styles/base/fonts-styles.scss
@@ -250,6 +250,19 @@
     $spacing: 3.1px
   );
 
+    text-decoration: none;
+
+&--link {
+   &:hover {
+    color: $color-accent;
+    text-decoration: underline;
+  }
+
+  &:active {
+    color: $color-active;
+  }
+}
+
   @include media-mobile {
     font-size: 16px;
     &--rss {
