--- a/source/styles/blocks/footer.scss
+++ b/source/styles/blocks/footer.scss
@@ -20,6 +20,12 @@
   border-bottom: 3px solid $color-icon-line;
   padding-bottom: 47px;
 
+  .logo {
+    @include media-mobile {
+      gap: 20px;
+    }
+  }
+
   @include media-desktop {
     padding-bottom: 49px;
   }
@@ -28,10 +34,9 @@
     padding-bottom: 40px;
   }
 
-  .logo {
-    @include media-mobile {
-      gap: 20px;
-    }
+  @include media-mobile {
+    flex-direction: column;
+    gap: 42px;
   }
 }
 
@@ -49,6 +54,19 @@
   @include media-tablet {
     flex-direction: column;
     margin-left: 0;
+  }
+
+  @include media-mobile {
+    // justify-content: space-between;
+    // align-items: start;
+    // flex-grow: 1;
+    gap: 40px;
+    width: 100%;
+
+    .nav {
+      width: 100%;
+      // background-color: antiquewhite;
+    }
   }
 }
 
@@ -71,6 +89,10 @@
   .nav__item {
     flex-grow: 0;
     width: 107px;
+
+    @include media-mobile {
+      width: fit-content;
+    }
   }
 
   @include media-desktop {
@@ -82,101 +104,15 @@
     margin-top: 19px;
     gap: 28px 80px;
     width: 429px;
-    // max-width: 400px;
-  }
-}
-
-.footer__social {
-  @include list-reset;
-  display: flex;
-  gap: 25px;
-  flex-wrap: wrap;
-  margin-top: auto;
-  margin-left: auto;
-  margin-bottom: 8px;
-
-  @include media-desktop {
-    margin-bottom: 0;
+    max-width: 430px;
   }
 
-  @include media-tablet {
-    margin: 32px auto 0 100px;
-  }
-}
-
-.footer__social-item {
-  display: block;
-  box-sizing: border-box;
-  width: 48px;
-  height: 48px;
-  border: 1px solid $color-white;
-  border-radius: 50%;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  &:hover {
-    border-color: $color-text-accent;
-
-    .footer__social-link {
-      background-color: $color-text-accent;
-    }
-  }
-
-  &:focus {
-    border-color: $color-point;
-    .footer__social-link {
-      background-color: $color-point;
-    }
-  }
-
-  &:active {
-    border-color: $color-accent;
-    .footer__social-link {
-      background-color: $color-accent;
-    }
-  }
-}
-
-.footer__social-link {
-  display: block;
-  width: 48px;
-  height: 48px;
-
-  background-color: $color-white;
-
-  mask-repeat: no-repeat;
-  mask-position: center;
-
-  &:focus {
-    background-color: $color-point;
-    outline: auto;
-  }
-
-  &--youtube {
-    mask-size: 23px 16px;
-    mask-image: url("../../icons/youtube.svg");
-  }
-
-  &--inst {
-    mask-size: 20px 20px;
-    mask-image: url("../../icons/inst.svg");
-  }
-
-  &--face {
-    mask-size: 13px 20px;
-    mask-image: url("../../icons/face.svg");
-  }
-
-  &--twitt {
-    mask-size: 20px 16px;
-    mask-image: url("../../icons/twitter.svg");
-  }
-
-  &--pint {
-    mask-size: 20px 20px;
-    mask-image: url("../../icons/pint.svg");
+  @include media-mobile {
+    margin-top: 0;
+    gap: 30px 85px;
+    width: 100%;
+    max-width: 100%;
+    height: 68px;
   }
 }
 
@@ -192,4 +128,24 @@
 
 .footer__copyright:last-child {
   margin-right: 19px;
+}
+
+.footer__social {
+  margin-top: auto;
+  margin-left: auto;
+  margin-bottom: 8px;
+  gap: 25px;
+
+  @include media-desktop {
+    margin-bottom: 0;
+  }
+
+  @include media-tablet {
+    margin: 32px auto 0 100px;
+  }
+
+  @include media-mobile {
+    margin: 0 auto;
+    gap: 5px;
+  }
 }
