--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -2,24 +2,26 @@
   // position: relative;
   background-color: $color-bg-dark;
 
-  nav {
-    @include media-desktop {
-      position: absolute;
-      top: 128px;
-      left: 0;
-      right: 0;
-      z-index: 10;
-    }
-  }
   .nav__list {
     box-sizing: border-box;
 
     @include media-desktop {
       flex-direction: column;
-      gap: 25px;
-      width: 300px;
-      padding: 35px 120px 10px 55px;
+      gap: 28px;
+      width: 297px;
+      padding: 38px 120px 10px 55px;
       background-color: $color-bg-dark;
+    }
+
+    @include media-tablet {
+      margin-bottom: 26px;
+      padding: 22px 120px 10px 55px;
+    }
+    @include media-mobile {
+      padding: 0;
+      width: 122px;
+      margin-left: 20px;
+      margin-bottom: 38px;
     }
   }
 
@@ -28,6 +30,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      font-size: 20px;
 
       &::after {
         display: block;
@@ -47,6 +50,35 @@
   .nav__link:hover::after,
   .nav__link:active::after {
     background-color: currentColor;
+  }
+}
+
+.header__nav {
+  @include media-desktop {
+    display: none;
+    position: absolute;
+    top: 128px;
+    left: 0;
+    right: 0;
+    z-index: 10;
+  }
+
+  @include media-tablet {
+    background-color: $color-bg-dark;
+    top: 125px;
+    padding-bottom: 35px;
+  }
+
+  @include media-mobile {
+    padding: 35px;
+            padding-bottom: 24px;
+    top: 90px;
+  }
+}
+
+.header__nav--open {
+  @include media-desktop {
+    display: block;
   }
 }
 
@@ -73,18 +105,6 @@
   }
 }
 
-.header__nav {
-  @include media-desktop {
-    display: none;
-  }
-}
-
-.header__nav--open {
-  @include media-desktop {
-    display: block;
-  }
-}
-
 .header__burger {
   @include btn-reset;
   display: none;
@@ -100,6 +120,8 @@
   mask-image: url("../../icons/burg_closer.svg");
 
   &--closer {
+    width: 25px;
+    height: 25px;
     mask-image: url("../../icons/burg_open.svg");
   }
   &:focus,
@@ -113,3 +135,22 @@
   }
 }
 
+header .header__social {
+  display: none;
+  border-top: 1px solid $color-icon-line;
+
+  @include media-tablet {
+    display: flex;
+    gap: 25px;
+    margin: 0 55px;
+    justify-content: center;
+    padding-top: 34px;
+  }
+
+  @include media-mobile {
+    padding-top: 24px;
+    gap: 5px;
+        margin: 0 20px;
+
+  }
+}
