--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -27,4 +27,6 @@
 @import "./blocks/contacts.scss";
 @import "./blocks/footer.scss";
 @import "./blocks/form.scss";
+@import "./blocks/social.scss";
+
 
